feat: add meta tags for social media, favicon and SEO engines

--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,50 @@
 <html lang="en">
 
 <head>
+  <!-- Primary Meta Tags -->
+  <title>Slippers</title>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="Slippers" content="Web site created using react and Typescript to replicate a famous E-commerce store" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="title" content="Slippers">
+  <meta name="description"
+    content="Website created using react and Typescript to replicate a famous E-commerce store with all the core features and more. For more about the creator check github.com/karimshalapy">
+  <meta name="theme-color" content="#f4f4f4" />
+  <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://slippers-react.web.app/">
+  <meta property="og:title" content="Slippers">
+  <meta property="og:description"
+    content="Website created using react and Typescript to replicate a famous E-commerce store with all the core features and more. For more about the creator check github.com/karimshalapy">
+  <meta property="og:image"
+    content="https://firebasestorage.googleapis.com/v0/b/slippers-react.appspot.com/o/slippers-meta-image.jpg?alt=media&token=d7bb8277-a0fe-4fe3-bf27-24c7b5266677">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://slippers-react.web.app/">
+  <meta property="twitter:title" content="Slippers">
+  <meta property="twitter:description"
+    content="Website created using react and Typescript to replicate a famous E-commerce store with all the core features and more. For more about the creator check github.com/karimshalapy">
+  <meta property="twitter:image"
+    content="https://firebasestorage.googleapis.com/v0/b/slippers-react.appspot.com/o/slippers-meta-image.jpg?alt=media&token=d7bb8277-a0fe-4fe3-bf27-24c7b5266677">
+  <meta property="twitter:creator	" content="@KarimShalapy">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/faviconData/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/faviconData/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="%PUBLIC_URL%/faviconData/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/faviconData/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/faviconData/favicon-16x16.png">
+  <link rel="mask-icon" href="%PUBLIC_URL%/faviconData/safari-pinned-tab.svg" color="#ae9304">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/faviconData/favicon.ico">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="%PUBLIC_URL%/faviconData/mstile-144x144.png">
+  <meta name="msapplication-config" content="%PUBLIC_URL%/faviconData/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
   <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    manifest.json provides metadata used when your web app is installed on a
+    user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+  -->
+  <link rel="manifest" href="%PUBLIC_URL%/faviconData/manifest.json" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,7 +55,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Slippers</title>
 </head>
 
 <body>
